--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -24,6 +25,7 @@
     -webkit-font-smoothing: antialiased;
     height: 100vh;
     width: 100vw;
+    font-family: Lato;
   }
   /*
     5. Improve media defaults
